Bug 442250 - Tooltip text color makes them hard to read with Breeze Light colors
Summary: Tooltip text color makes them hard to read with Breeze Light colors
Status: RESOLVED FIXED
Alias: None
Product: systemdgenie
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Ragnar Thomsen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-09-10 07:10 UTC by Vladimir Yerilov
Modified: 2022-08-04 14:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
The way it looks (28.51 KB, image/png)
2021-09-10 07:10 UTC, Vladimir Yerilov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Vladimir Yerilov 2021-09-10 07:10:50 UTC
Created attachment 141439 [details]
The way it looks

SUMMARY
With Breeze light color scheme (and others derived from it) it is barely possible to read the content of tooltips shown when hovering over systemd units in Systemd Genie and Systemd KCM.

STEPS TO REPRODUCE
1. Select Breeze Light or Breath Light (Manjaro)
2. Open Systemd KCM or Systemd Genie on place your curson over any unit in the list
3. Observe

OBSERVED RESULT
Tooltip text is hard to read

EXPECTED RESULT
Text is perfectly readable

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.22.80
KDE Frameworks Version: 5.86.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
Problem is present since Plasma 5.14 as far as I can tell (I haven't used Plasma with Systemd Genie before that version).
And, to prevent any objections that it is a color theme issue, this situation is observed only with Systemd Genie and Systemd KCM. All other apps are fine.
Comment 1 Bug Janitor Service 2022-07-18 02:27:05 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/systemdgenie/-/merge_requests/1
Comment 2 Nate Graham 2022-08-04 14:27:55 UTC
Git commit 58929cd99c9a71744291a76b0e67b56e89dfb90c by Nate Graham, on behalf of Vladimir Yerilov.
Committed on 04/08/2022 at 14:27.
Pushed by ngraham into branch 'master'.

Un-hardcode tooltip text color

Hardcoded white colored font was unreadable when the color scheme has
a light background color for tooltips, rendering them useless.

M  +0    -1    src/unitmodel.cpp

https://invent.kde.org/system/systemdgenie/commit/58929cd99c9a71744291a76b0e67b56e89dfb90c