Un-hardcode tooltip text color

Hardcoded white colored font was unreadable when the color scheme has
a light background color for tooltips, rendering them useless.

BUG: 442250